Compile with spdlog v1.11
Change-Id: I82608299bab6d348cb2ef99d38595c6bad983b5c

--- a/aff4/Makefile.am
+++ b/aff4/Makefile.am
@@ -81,7 +81,7 @@ libaff4_la_SOURCES = \
 	tclap_parsers.cc
 
 libaff4_la_LDFLAGS = $(STATIC_LIBLDFLAGS)
-libaff4_la_INCLUDES = ${RAPTOR2_CFLAGS} ${UUID_CFLAGS} ${TCLAP_CFLAGS} ${YAML_CPP_CFLAGS} ${ZLIB_CFLAGS} ${UUID_CFLAGS}
+libaff4_la_INCLUDES = ${RAPTOR2_CFLAGS} ${UUID_CFLAGS} ${TCLAP_CFLAGS} ${YAML_CPP_CFLAGS} ${ZLIB_CFLAGS} ${UUID_CFLAGS} ${SPDLOG_CFLAGS}
 
 if WINDOWS
 libaff4_la_LIBADD = -lrpcrt4 -lshlwapi ${LIBS} ${YAML_CPP_LIBS} ${ZLIB_LIBS} ${RAPTOR2_LIBS} ${TCLAP_LIBS}
@@ -90,7 +90,7 @@ libaff4_la_LIBADD = ${LIBS} ${YAML_CPP_LIBS} ${ZLIB_LIBS} ${RAPTOR2_LIBS} ${TCLA
 endif
 
 bin_PROGRAMS = aff4imager
-aff4imager_LDADD = libaff4.la ${LIBS} ${YAML_CPP_LIBS} ${ZLIB_LIBS} ${RAPTOR2_LIBS} ${TCLAP_LIBS} ${UUID_LIBS}
+aff4imager_LDADD = libaff4.la ${LIBS} ${YAML_CPP_LIBS} ${ZLIB_LIBS} ${RAPTOR2_LIBS} ${TCLAP_LIBS} ${UUID_LIBS} ${SPDLOG_LIBS}
 aff4imager_INCLUDES = ${RAPTOR2_CFLAGS} ${UUID_CFLAGS} ${TCLAP_CFLAGS} ${YAML_CPP_CFLAGS} ${ZLIB_CFLAGS}
 aff4imager_LDFLAGS = $(STATIC_LINKERLDFLAGS)
 
